# schirrmeisterei

./: .gitignore  .pre-commit-config.yaml  README.md  REVIEW.md  SCALING.md  docker-compose.dev.yml  docker-compose.yml  justfile
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  0001_initial_schema.py  0002_add_ticket_number.py  0002_config_items_and_ticket_attributes.py  0002_multi_tenancy.py  0003_add_totp_replay_guard.py  0003_user_avatar.py  0003_user_groups_and_permissions.py  0004_add_refresh_tokens_table.py  0005_encrypt_smtp_password.py  0006_ticket_watchers.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  deps.py  encryption.py  exceptions.py  limiter.py  security.py
backend/app/db/: session.py
backend/app/models/: models.py
backend/app/schemas/: config.py  ticket.py  user.py
backend/app/services/: email_ingestion.py  email_service.py  imap_poller.py  organization_service.py  ticket_service.py  totp_service.py  user_service.py
backend/app/tests/: conftest.py
backend/app/tests/integration/: test_auth.py  test_tickets.py
backend/app/tests/unit/: test_organization_service.py  test_totp.py  (+2 more)
backend/data/: example_users.xlsx  organisation_hierarchy.xlsx
backend/data/seed/: admin_users.yaml  app_settings.yaml  config_items.yaml  organisations.yaml  permissions.yaml  role_permissions.yaml  user_groups.yaml
backend/scripts/: create_hierarchy_xlsx.py  create_superuser.py  init_db.py
(+108 files in other folders)
